# ScaleTorch

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  benchmark.py  prompt.md  pyproject.toml  requirements.txt  run.sh  run_tests.py  set_env.sh  setup.cfg  test_moe_model.py  train.py
.trae/rules/: cursorrules.md
.trae/skills/code-check-optimize/: SKILL.md
.trae/skills/code-optimizer/: SKILL.md
.trae/skills/project-style-guide/: SKILL.md
doc/: MoE图解指南.md  Prompt.md  ddp_intro.md  fsdp_intro.md  scaletorch.dist文档.md  分布式通信原语.md  分布式集合通信和通信原语.md
doc/parallel/: communication.md  context_parallel.md  data_parallel.md  gradient_bucket.md  overview.md  pg_manager.md  pipeline_parallel.md  tensor_parallel.md
docker/: Dockerfile  docker-compose.yml
docs/: FSDP2-fully-shard-guide.md  FSDP2.md  Prompt.md  device_mesh.md  fsdp2-complete-guide.md  fsdp2_tp_tutorial.md  optimization_report.md  分布式集合通信和通信原语.md  深入理解 PyTorch DTensor.md
docs/images/: draw_diagrams.py
docs/parallel/: communication.md  overview.md
examples/: set_env.sh
examples/FSDP2/: README.md  checkpoint.py  data.py  fsdp2_llama2_main.py  fsdp2_main.py  fsdp2_tp_llama2_main.py  llama2.py  model.py  run_example.sh  run_fsdp2_tp_llama2.sh  run_wikitext2.sh  test_smoke.py  test_smoke_mp.py  utils.py
examples/ddp_tutorial/: multinode.py
examples/device_mesh/: device_mesh_api.py  dtensor_demo.py  fsdp_dp_demo.py  fsdp_tp_demo.py  hsdp_demo.py  manual_process_group.py  run.sh  sequence_parallel_demo.py  tensor_parallel_demo.py
examples/fsdp/: fsdp_mnist.py  mnist_demo.py
examples/imagenet/: dist_train.py  run.sh
examples/mingpt/: char_dataset.py  gpt2_train_cfg.yaml  main.py  model.py  trainer.py
examples/minigpt/: char_dataset.py  main.py  model.py  trainer.py
examples/mnist/: README.md  a.py  basic_mnist.py  fsdp_mnist.py  multigpu_mnist.py  torchrun_mnist.py
examples/picotron/: README.md  run.sh  train.py
examples/torch_examples/: run_examples.sh
examples/torch_examples/mnist/: basic_mnist.py  fsdp_mnist.py
scaletorch/: __init__.py  env.py
scaletorch/data/: __init__.py  dataloader.py  dataset.py  pretrain_dataset.py
scaletorch/dataset/: dataloader.py
scaletorch/model/: model_llama.py  model_qwen3.py
scaletorch/models/: __init__.py  attention_utils.py  lenet.py  llama.py  model_llama.py  model_qwen3.py  model_qwen3_moe.py  moe.py  moe_model.py  npu_patch.py
scaletorch/models/attention/: __init__.py  base.py  gqa.py  mha.py  mla.py  mqa.py
scaletorch/parallel/: __init__.py  pg_manager.py  process_group.py
scaletorch/parallel/context_parallel/: __init__.py  context_parallel.py  cp_comms.py
scaletorch/parallel/data_parallel/: __init__.py  bucket.py  data_parallel.py
scaletorch/parallel/expert_parallel/: __init__.py  ep_comms.py
scaletorch/parallel/pipeline_parallel/: __init__.py  pipeline_parallel.py  pp_comms.py
scaletorch/trainer/: __init__.py  config.py  dist_setup.py  lr_scheduler.py  lr_scheduler_config.py  metrics.py  model_builder.py  train_step.py
scaletorch/utils/: __init__.py  arg_utils.py  checkpoint.py  create_config.py  device.py  env_utils.py  lenet_model.py  logger_utils.py  misc.py  monitor.py  path.py  performance_monitor.py  torch_dist.py  utils.py
scripts/: bench_single.py  benchmark_all.py  benchmark_comprehensive.py  benchmark_comprehensive.sh  benchmark_moe.sh  benchmark_multicard.sh  benchmark_npu.sh  cerate_config.sh  group_nodes.py  hf_download.sh  optimize_mfu.py  run_npu.sh  sweep_mfu.sh  verify_qwen3.py
scripts/torch_dist/: launch_multi_nodes.sh  launch_single_node.sh  run_dist_demo.py  run_dist_test.py  set_env.sh
template/: base_config.json
tests/: benchmark_moe.py  conftest.py  test_base.py  test_bucket.py  test_config.py  test_context_parallel.py  test_cp_comms.py  test_create_config.py  test_data.py  test_data_parallel.py  test_device.py  test_device_monitor.py  test_dist.py  test_lr_scheduler.py  test_model.py  test_model_llama.py  test_moe_model.py  test_pg_manager.py  test_pipeline_parallel.py  test_pp_comms.py  test_process_group.py  test_sequence_parallel.py  test_tp_comms.py  test_utils.py
tests/data/: test_data.py
tests/models/: test_moe_model.py
tests/parallel/: test_data_parallel.py  test_ep_comms.py  test_pp_comms.py  test_process_group.py  test_tp_comms.py
tests/trainer/: test_config.py
tests/utils/: test_checkpoint.py  test_device.py  test_utils.py
tools/: bench_single.py  optimize_mfu.py  profile_mfu.py  train.py  verify_qwen3.py
(+5 files in other folders)
