[metadata]
name = scaletorch
version = 0.1.0
author = jianzhnie
author_email = jianzhnie@gmail.com
description = A package for training large language models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitee.com/jianzhnie/ScaleTorch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    datasets
    requests
    safetensors
    torch>=1.11.0
    transformers
